# lab3_gayathri_chinka

./: README.md  pyproject.toml  train.py
app/: main.py
app/data/: feature_columns.pkl
